manifests/services/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lcl
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
