manifests/services/hello-asp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-asp
  name: hello-asp
  namespace: lcl
spec:
  selector:
    matchLabels:
      app: hello-asp
  template:
    metadata:
      labels:
        app: hello-asp
    spec:
      containers:
      - image: hello-asp:latest
        name: app
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-asp
  namespace: lcl
spec:
  ports:
  - port: 80
  selector:
    app: hello-asp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-asp
  namespace: lcl
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd,kube-system-protected-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: lcl-hello-asp.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-asp
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-asp
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  ports:
  - port: 3001
  type: ExternalName
  externalName: 192.168.0.145
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-asp
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: dev-hello-asp.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-asp
            port:
              number: 3001
