manifests/services/hello-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-django
  name: hello-django
  namespace: dev-hello
spec:
  selector:
    matchLabels:
      app: hello-django
  template:
    metadata:
      labels:
        app: hello-django
    spec:
      containers:
      - image: hello-django:latest
        name: hello-django
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-django
  namespace: dev-hello
spec:
  ports:
  - port: 8000
  selector:
    app: hello-django
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-django
  namespace: dev-hello
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd,kube-system-protected-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: dev-hello-django.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-django
            port:
              number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-django
  namespace: lcl-hello
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  ports:
  - port: 3002
  type: ExternalName
  externalName: 192.168.0.145
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-django
  namespace: lcl-hello
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: lcl-hello-django.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-django
            port:
              number: 3002
