manifests/services/hello-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-flask
  name: hello-flask
  namespace: lcl
spec:
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      containers:
      - image: hello-flask:latest
        name: app
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-flask
  namespace: lcl
spec:
  ports:
  - port: 5000
  selector:
    app: hello-flask
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-flask
  namespace: lcl
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd,kube-system-protected-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: lcl-hello-flask.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-flask
            port:
              number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-flask
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  ports:
  - port: 3003
  type: ExternalName
  externalName: 192.168.0.145
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-flask
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-secured-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: dev-hello-flask.k8slocal.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-flask
            port:
              number: 3003
